--- a/defconfig/rockchip64-rk356x_defconfig
+++ b/defconfig/rockchip64-rk356x_defconfig
@@ -30,16 +30,7 @@ CONFIG_BOOT_CONFIG=y
 CONFIG_EXPERT=y
 CONFIG_PROFILING=y
 CONFIG_ARCH_ROCKCHIP=y
-# CONFIG_ARM64_ERRATUM_832075 is not set
-# CONFIG_ARM64_ERRATUM_834220 is not set
-# CONFIG_ARM64_ERRATUM_1024718 is not set
-# CONFIG_ARM64_ERRATUM_1418040 is not set
-# CONFIG_ARM64_ERRATUM_1165522 is not set
-# CONFIG_ARM64_ERRATUM_1530923 is not set
-# CONFIG_ARM64_ERRATUM_1286807 is not set
-# CONFIG_ARM64_ERRATUM_1463225 is not set
 # CONFIG_ARM64_ERRATUM_1542419 is not set
-# CONFIG_ARM64_ERRATUM_1508412 is not set
 # CONFIG_ARM64_ERRATUM_2051678 is not set
 # CONFIG_ARM64_ERRATUM_2077057 is not set
 # CONFIG_CAVIUM_ERRATUM_22375 is not set
@@ -55,7 +46,6 @@ CONFIG_ARCH_ROCKCHIP=y
 # CONFIG_QCOM_QDF2400_ERRATUM_0065 is not set
 # CONFIG_QCOM_FALKOR_ERRATUM_E1041 is not set
 # CONFIG_NVIDIA_CARMEL_CNP_ERRATUM is not set
-# CONFIG_SOCIONEXT_SYNQUACER_PREITS is not set
 CONFIG_ARM64_VA_BITS_48=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=16
@@ -120,14 +110,15 @@ CONFIG_BLK_CGROUP_IOPRIO=y
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
 CONFIG_PARTITION_ADVANCED=y
+CONFIG_BSD_DISKLABEL=y
 CONFIG_CMDLINE_PARTITION=y
-# CONFIG_MQ_IOSCHED_DEADLINE is not set
-# CONFIG_MQ_IOSCHED_KYBER is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_BINFMT_MISC=m
 CONFIG_ZSWAP=y
+CONFIG_ZSWAP_DEFAULT_ON=y
 CONFIG_Z3FOLD=y
+CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_CMA=y
 CONFIG_CMA_AREAS=7
@@ -258,39 +249,56 @@ CONFIG_NET_ACT_POLICE=y
 CONFIG_NET_ACT_GACT=y
 CONFIG_NETLINK_DIAG=y
 CONFIG_CGROUP_NET_PRIO=y
+CONFIG_HAMRADIO=y
+CONFIG_AX25=m
+CONFIG_NETROM=m
+CONFIG_ROSE=m
+CONFIG_MKISS=m
+CONFIG_6PACK=m
+CONFIG_BPQETHER=m
+CONFIG_BAYCOM_SER_FDX=m
+CONFIG_BAYCOM_SER_HDX=m
+CONFIG_YAM=m
 CONFIG_BT=y
-CONFIG_BT_RFCOMM=y
+CONFIG_BT_RFCOMM=m
 CONFIG_BT_RFCOMM_TTY=y
-CONFIG_BT_BNEP=y
+CONFIG_BT_BNEP=m
 CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_BT_BNEP_PROTO_FILTER=y
-CONFIG_BT_HIDP=y
+CONFIG_BT_HIDP=m
 CONFIG_BT_HS=y
 CONFIG_BT_LEDS=y
 CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBTSDIO=m
 CONFIG_BT_HCIUART=m
+CONFIG_BT_HCIUART_LL=y
 CONFIG_BT_HCIUART_BCM=y
 CONFIG_BT_HCIUART_RTL=y
 CONFIG_BT_HCIBCM203X=m
-CONFIG_BT_HCIBPA10X=m
+CONFIG_BT_MTKSDIO=m
+CONFIG_BT_MTKUART=m
 CONFIG_CFG80211=m
 CONFIG_MAC80211=m
 CONFIG_MAC80211_LEDS=y
 CONFIG_RFKILL=y
+CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=y
+CONFIG_CAIF=y
+CONFIG_LWTUNNEL=y
+CONFIG_FAILOVER=m
 CONFIG_PCI=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_PCIE_PTM=y
-CONFIG_PCI_HOST_GENERIC=m
+CONFIG_HOTPLUG_PCI=y
 CONFIG_PCIE_ROCKCHIP_HOST=y
-CONFIG_PCIE_DW_PLAT_HOST=y
 CONFIG_PCIE_ROCKCHIP_DW_HOST=y
 CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_CONNECTOR=y
 CONFIG_ARM_SCMI_PROTOCOL=y
 CONFIG_ARM_SCPI_PROTOCOL=y
+CONFIG_SYSFB_SIMPLEFB=y
 CONFIG_EFI_BOOTLOADER_CONTROL=y
 CONFIG_RESET_ATTACK_MITIGATION=y
 CONFIG_EFI_COCO_SECRET=y
@@ -331,7 +339,7 @@ CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_INIT=y
 CONFIG_DM_UEVENT=y
-CONFIG_TARGET_CORE=m
+CONFIG_TARGET_CORE=y
 CONFIG_TCM_IBLOCK=m
 CONFIG_TCM_FILEIO=m
 CONFIG_TCM_PSCSI=m
@@ -462,6 +470,7 @@ CONFIG_RTW89_DEBUGFS=y
 # CONFIG_WLAN_VENDOR_SILABS is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
+CONFIG_RTL8822BU=m
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
 CONFIG_USB_NET_RNDIS_WLAN=m
@@ -488,6 +497,9 @@ CONFIG_SERIAL_8250_RUNTIME_UARTS=8
 CONFIG_SERIAL_8250_DW=y
 CONFIG_SERIAL_OF_PLATFORM=y
 CONFIG_SERIAL_DEV_BUS=y
+CONFIG_HW_RANDOM=y
+CONFIG_HW_RANDOM_OPTEE=m
+CONFIG_HW_RANDOM_ARM_SMCCC_TRNG=m
 # CONFIG_HW_RANDOM_CN10K is not set
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=y
@@ -505,7 +517,7 @@ CONFIG_SPI_DW_DMA=y
 CONFIG_SPI_DW_PCI=m
 CONFIG_SPI_DW_MMIO=m
 CONFIG_SPI_ROCKCHIP=y
-CONFIG_SPI_ROCKCHIP_SFC=m
+CONFIG_SPI_ROCKCHIP_SFC=y
 CONFIG_SPI_MUX=m
 # CONFIG_PTP_1588_CLOCK is not set
 CONFIG_PINCTRL_RK805=y
@@ -522,23 +534,34 @@ CONFIG_SENSORS_ARM_SCPI=y
 CONFIG_SENSORS_GPIO_FAN=y
 CONFIG_SENSORS_PWM_FAN=y
 CONFIG_THERMAL=y
+CONFIG_THERMAL_NETLINK=y
 CONFIG_THERMAL_STATISTICS=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_BANG_BANG=y
+CONFIG_THERMAL_GOV_USER_SPACE=y
+CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
 CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
 CONFIG_ROCKCHIP_THERMAL=y
 CONFIG_WATCHDOG=y
+CONFIG_WATCHDOG_SYSFS=y
+CONFIG_WATCHDOG_HRTIMER_PRETIMEOUT=y
+CONFIG_WATCHDOG_PRETIMEOUT_GOV=y
+CONFIG_SOFT_WATCHDOG=m
 CONFIG_DW_WATCHDOG=y
+CONFIG_MFD_AXP20X_I2C=m
 CONFIG_MFD_RK808=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_FAN53555=y
+CONFIG_REGULATOR_FAN53880=y
 CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_PWM=y
 CONFIG_REGULATOR_RK808=y
 CONFIG_RC_CORE=y
+CONFIG_BPF_LIRC_MODE2=y
+CONFIG_LIRC=y
 CONFIG_RC_MAP=m
 CONFIG_RC_DECODERS=y
 CONFIG_IR_IMON_DECODER=m
@@ -554,15 +577,18 @@ CONFIG_IR_SONY_DECODER=m
 CONFIG_IR_XMP_DECODER=m
 CONFIG_RC_DEVICES=y
 CONFIG_IR_GPIO_CIR=m
+CONFIG_IR_GPIO_TX=m
 CONFIG_IR_HIX5HD2=m
 CONFIG_IR_IGORPLUGUSB=m
 CONFIG_IR_IGUANA=m
 CONFIG_IR_IMON=m
 CONFIG_IR_IMON_RAW=m
 CONFIG_IR_MCEUSB=m
+CONFIG_IR_PWM_TX=m
 CONFIG_IR_REDRAT3=m
 CONFIG_IR_SERIAL=m
 CONFIG_IR_SERIAL_TRANSMITTER=y
+CONFIG_IR_SPI=m
 CONFIG_IR_STREAMZAP=m
 CONFIG_IR_TOY=m
 CONFIG_IR_TTUSBIR=m
@@ -578,17 +604,28 @@ CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_SUPPORT_FILTER=y
 # CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
 CONFIG_MEDIA_CAMERA_SUPPORT=y
+CONFIG_MEDIA_ANALOG_TV_SUPPORT=y
+CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 CONFIG_MEDIA_PLATFORM_SUPPORT=y
+CONFIG_MEDIA_CONTROLLER_DVB=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=y
+CONFIG_MEDIA_PCI_SUPPORT=y
+CONFIG_DVB_DDBRIDGE=m
+CONFIG_DVB_DM1105=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_DVB_PLATFORM_DRIVERS=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_MEM2MEM_DEINTERLACE=y
+CONFIG_VIDEO_MUX=y
+CONFIG_VIDEO_CAFE_CCIC=y
 CONFIG_VIDEO_ROCKCHIP_RGA=y
-CONFIG_VIDEO_ROCKCHIP_ISP1=m
+CONFIG_VIDEO_ROCKCHIP_ISP1=y
 CONFIG_VIDEO_IR_I2C=m
 CONFIG_DRM=y
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
+CONFIG_DRM_DP_CEC=y
+CONFIG_DRM_MALI_DISPLAY=m
 CONFIG_DRM_ROCKCHIP=y
 CONFIG_ROCKCHIP_VOP2=y
 CONFIG_ROCKCHIP_ANALOGIX_DP=y
@@ -597,13 +634,25 @@ CONFIG_ROCKCHIP_DW_HDMI=y
 CONFIG_ROCKCHIP_DW_MIPI_DSI=y
 CONFIG_ROCKCHIP_INNO_HDMI=y
 CONFIG_ROCKCHIP_LVDS=y
+CONFIG_ROCKCHIP_RGB=y
+CONFIG_ROCKCHIP_RK3066_HDMI=y
 CONFIG_DRM_PANEL_SIMPLE=y
 CONFIG_DRM_PANEL_EDP=y
 CONFIG_DRM_DISPLAY_CONNECTOR=y
-CONFIG_DRM_LIMA=m
+CONFIG_DRM_SIMPLE_BRIDGE=y
+CONFIG_DRM_ANALOGIX_ANX6345=y
+CONFIG_DRM_ANALOGIX_ANX78XX=y
+CONFIG_DRM_ANALOGIX_ANX7625=y
+CONFIG_DRM_DW_HDMI_AHB_AUDIO=y
+CONFIG_DRM_DW_HDMI_I2S_AUDIO=y
+CONFIG_DRM_DW_HDMI_GP_AUDIO=y
+CONFIG_DRM_DW_HDMI_CEC=y
+CONFIG_DRM_SIMPLEDRM=m
 CONFIG_DRM_PANFROST=y
 CONFIG_FB=y
+CONFIG_FB_UVESA=m
 CONFIG_FB_EFI=y
+CONFIG_FB_SIMPLE=m
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_PWM=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
@@ -640,6 +689,9 @@ CONFIG_SND_SIMPLE_CARD=y
 CONFIG_SND_AUDIO_GRAPH_CARD=y
 CONFIG_SND_AUDIO_GRAPH_CARD2=y
 CONFIG_SND_AUDIO_GRAPH_CARD2_CUSTOM_SAMPLE=m
+CONFIG_HIDRAW=y
+CONFIG_UHID=y
+CONFIG_HID_CMEDIA=m
 CONFIG_HID_MULTITOUCH=y
 CONFIG_USB_HIDDEV=y
 CONFIG_USB_LED_TRIG=y
@@ -657,16 +709,16 @@ CONFIG_USB_ACM=y
 CONFIG_USB_PRINTER=y
 CONFIG_USB_WDM=y
 CONFIG_USB_STORAGE=y
+CONFIG_USB_STORAGE_REALTEK=m
 CONFIG_USB_UAS=y
 CONFIG_USB_DWC3=y
 CONFIG_USB_DWC2=y
-CONFIG_USB_DWC2_PCI=m
+CONFIG_USB_DWC2_PCI=y
 CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_SIMPLE=y
 CONFIG_USB_SERIAL_QCAUX=y
 CONFIG_USB_SERIAL_QUALCOMM=y
 CONFIG_USB_SERIAL_OPTION=y
-CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_U_SERIAL_CONSOLE=y
@@ -717,7 +769,7 @@ CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PCI=m
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_ARASAN=y
-CONFIG_MMC_SDHCI_OF_DWCMSHC=m
+CONFIG_MMC_SDHCI_OF_DWCMSHC=y
 CONFIG_MMC_DW=y
 CONFIG_MMC_DW_PCI=m
 CONFIG_MMC_DW_ROCKCHIP=y
@@ -759,9 +811,12 @@ CONFIG_UIO_PCI_GENERIC=m
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VHOST_MENU is not set
 CONFIG_STAGING=y
+CONFIG_RTL8192U=m
 CONFIG_RTL8723BS=m
 CONFIG_R8712U=m
 CONFIG_R8188EU=m
+CONFIG_RTS5208=m
+CONFIG_FB_SM750=m
 CONFIG_STAGING_MEDIA=y
 CONFIG_VIDEO_HANTRO=y
 CONFIG_VIDEO_ROCKCHIP_VDEC=y
@@ -783,20 +838,29 @@ CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_PASSIVE=y
-CONFIG_ARM_RK3399_DMC_DEVFREQ=y
+CONFIG_ARM_RK3399_DMC_DEVFREQ=m
+CONFIG_DEVFREQ_EVENT_ROCKCHIP_DFI=y
 CONFIG_EXTCON_ADC_JACK=y
 CONFIG_EXTCON_GPIO=y
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
 CONFIG_IIO_SW_DEVICE=y
 CONFIG_IIO_SW_TRIGGER=y
+CONFIG_IIO_TRIGGERED_EVENT=m
 CONFIG_ROCKCHIP_SARADC=y
+CONFIG_IIO_MUX=m
+CONFIG_IIO_SYSFS_TRIGGER=m
 CONFIG_PWM=y
+CONFIG_PWM_DWC=y
 CONFIG_PWM_ROCKCHIP=y
+CONFIG_PHY_CAN_TRANSCEIVER=y
 CONFIG_PHY_ROCKCHIP_DP=y
+CONFIG_PHY_ROCKCHIP_DPHY_RX0=y
 CONFIG_PHY_ROCKCHIP_EMMC=y
 CONFIG_PHY_ROCKCHIP_INNO_HDMI=y
 CONFIG_PHY_ROCKCHIP_INNO_USB2=y
+CONFIG_PHY_ROCKCHIP_INNO_CSIDPHY=y
+CONFIG_PHY_ROCKCHIP_INNO_DSIDPHY=y
 CONFIG_PHY_ROCKCHIP_NANENG_COMBO_PHY=y
 CONFIG_PHY_ROCKCHIP_PCIE=y
 CONFIG_PHY_ROCKCHIP_SNPS_PCIE3=y
@@ -807,6 +871,7 @@ CONFIG_ARM_CCI_PMU=y
 CONFIG_RAS=y
 CONFIG_ROCKCHIP_EFUSE=y
 CONFIG_ROCKCHIP_OTP=y
+CONFIG_NVMEM_RMEM=m
 CONFIG_TEE=y
 CONFIG_OPTEE=y
 CONFIG_MUX_GPIO=m
@@ -814,10 +879,14 @@ CONFIG_VALIDATE_FS_PARSER=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS_POSIX_ACL=y
-CONFIG_EXT4_FS=y
-CONFIG_EXT4_FS_POSIX_ACL=y
+CONFIG_EXT2_FS_SECURITY=y
+CONFIG_EXT3_FS=y
+CONFIG_EXT3_FS_POSIX_ACL=y
+CONFIG_EXT3_FS_SECURITY=y
 CONFIG_XFS_FS=y
 CONFIG_XFS_POSIX_ACL=y
+CONFIG_BTRFS_FS=y
+CONFIG_BTRFS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_CHECK_FS=y
@@ -831,17 +900,19 @@ CONFIG_CUSE=y
 CONFIG_OVERLAY_FS=y
 CONFIG_OVERLAY_FS_INDEX=y
 CONFIG_OVERLAY_FS_METACOPY=y
+CONFIG_NETFS_STATS=y
+CONFIG_FSCACHE=y
+CONFIG_CACHEFILES=y
 CONFIG_ISO9660_FS=m
 CONFIG_JOLIET=y
 CONFIG_ZISOFS=y
 CONFIG_UDF_FS=m
-CONFIG_MSDOS_FS=m
+CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_UTF8=y
 CONFIG_EXFAT_FS=y
-CONFIG_NTFS3_FS=y
-CONFIG_NTFS3_64BIT_CLUSTER=y
-CONFIG_NTFS3_FS_POSIX_ACL=y
+CONFIG_NTFS_FS=y
+CONFIG_NTFS_RW=y
 CONFIG_PROC_CHILDREN=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
@@ -889,7 +960,6 @@ CONFIG_CRYPTO_CURVE25519=y
 CONFIG_CRYPTO_CHACHA20POLY1305=y
 CONFIG_CRYPTO_SEQIV=y
 CONFIG_CRYPTO_ECHAINIV=y
-CONFIG_CRYPTO_BLAKE2B=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_ARC4=y
 CONFIG_CRYPTO_DES=y
@@ -904,7 +974,6 @@ CONFIG_CRYPTO_USER_API_AEAD=y
 CONFIG_CRYPTO_DEV_ROCKCHIP=y
 CONFIG_PKCS8_PRIVATE_KEY_PARSER=y
 CONFIG_CORDIC=y
-CONFIG_CRC_CCITT=y
 CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=64
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=7
