--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -95,9 +95,13 @@ CONFIG_CMDLINE_PARTITION=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_BINFMT_MISC=m
+CONFIG_CLEANCACHE=y
+CONFIG_FRONTSWAP=y
 CONFIG_ZSWAP=y
-CONFIG_ZSWAP_DEFAULT_ON=y
 CONFIG_Z3FOLD=y
+CONFIG_ZPOOL=y
+CONFIG_ZBUD=y
+CONFIG_ZSWAP_DEFAULT_ON=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_MEMORY_FAILURE=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
